[package]
name = "mes"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc", "derive"]
alloc = []
derive = ["dep:mes-derive"]

[dependencies]
mes-derive = { version = "0.1.0", path = "../mes-derive", optional = true }
num-traits = { version = "0.2.15", default-features = false }
void = "1.0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
