[package]
name = "mes"
version = "0.1.0"
edition = "2021"

[features]
default = ["alloc", "derive"]
alloc = []
derive = ["dep:mes-derive"]
libm = ["num-traits/libm"]
std = ["num-traits/std", "alloc"]
vector = ["dep:nalgebra"]

[dependencies]
cfg-if = "1.0.0"
derive_more = "0.99"
mes-derive = { version = "0.1.0", path = "../mes-derive", optional = true }
nalgebra = { version = "0.31.4", default-features = false, features = ["matrixmultiply"], optional = true }
num-traits = { version = "0.2.15", default-features = false }
void = "1.0.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
